# mangos-tbc

./: .clang-format  .editorconfig  .gitignore  .gitmodules  .travis.yml  AUTHORS.md  CMakeLists.txt  ChangeLog  ChangeLog.md  Creature18694.sql  Dockerfile  Makefile.am  NEWS  Quest10078.sql  Quest10641.sql  README.md  appveyor.yml  circle.yml  configure.ac  meson.build
contrib/vmap_extractor/vmapextract/: CMakeLists.txt  adtfile.cpp  gameobject_extract.cpp  meson.build  model.cpp  model.h  modelheaders.h  mpq_libmpq.cpp  vmapexport.cpp  vmapexport.h  wmo.cpp  wmo.h
dep/lockless-allocator/: CMakeLists.txt
dep/lockless-allocator/src/: compiler.h  gcc.h  ll_alloc.c  ll_asm.h  ll_list.h  ming.h  vs.h  win_stub.cc
dep/lualib/: CMakeLists.txt
sql/updates/: 080_8835_01_mangos_command.sql  083_8965_01_mangos_mangos_string.sql  083_8965_02_mangos_command.sql  084_7292_01_mangos_points_of_interest.sql  084_7292_02_mangos_locales_points_of_interest.sql  085_8923_01_mangos_gossip.sql  092_9380_01_mangos_command.sql  099_9509_01_mangos_item_template.sql  099_9636_01_mangos_item_template.sql  100_9656_02_mangos_mangos_string.sql  102_9687_01_characters_character_queststatus_daily.sql  105_9680_01_characters_character_stats.sql  106_9751_01_characters.sql  111_9767_01_mangos_mangos_string.sql  112_8874_01_characters_character_skills.sql  115_9883_01_mangos_scripts.sql  116_9891_02_mangos_creature_movement_scripts.sql  119_7369_01_mangos_quest_template.sql  120_xxxx_01_mangos_spell_proc_event.sql  122_10015_01_mangos_spell_proc_event.sql  124_7904_01_mangos_creature_template.sql  124_8237_01_mangos_creature_template.sql  126_10044_01_mangos_spell_chain.sql  126_10044_02_mangos_spell_proc_event.sql  127_10045_01_mangos_spell_proc_event.sql  129_10012_01_mangos_spell_proc_event.sql  130_10086_01_mangos_command.sql  132_10106_01_mangos_command.sql  133_10107_01_mangos_mangos_string.sql  135_10125_01_mangos_mangos_string.sql  136_10148_01_mangos_mangos_string.sql  138_7056_01_mangos_spell_proc_event.sql  9999_01_mangos_spell_bonus_data.sql  Makefile.am  README  mangos_creature_template.sql  mangos_creature_template_classlevelstats.sql  s0028_10208_01_mangos_playercreateinfo.sql  s0046_10263_01_mangos_pool_creature.sql  s0065_10286_01_mangos_creature_addon.sql  (+109 more)
sql/updates/0.12.1/: 084_7292_01_mangos_points_of_interest.sql  085_8929_01_mangos_gossip_scripts.sql  086_9010_01_realmd_realmlist.sql  093_9385_01_mangos_command.sql  102_9687_01_characters_character_queststatus_daily.sql  110_9761_01_mangos_mangos_string.sql  111_9767_02_mangos_command.sql  117_9886_01_mangos_mangos_string.sql  123_10017_01_mangos_spell_proc_event.sql  124_8237_01_mangos_creature_template.sql  s0039_10244_01_mangos_command.sql  s0075_10289_02_mangos_creature_model_info.sql  s0103_10331_02_mangos_command.sql  s0190_7199_03_mangos_spell_bonus_data.sql  s0224_10503_02_characters_gameobject_respawn.sql  s0224_10503_03_mangos_creature_respawn.sql  s0262_xxxxx_01_mangos_spell_bonus_data.sql
sql/updates/0.12.2/: s0308_7560_01_mangos_gameobject_template.sql  s0345_10628_01_mangos_mangos_string.sql  s0384_10664_01_characters_arena_team_stats.sql  s0386_10662_01_characters_item_loot.sql  s0391_10679_01_mangos_npc_vendor_template.sql  s0418_7908_01_mangos_creature_template.sql  s0481_8249_02_mangos_spell_chain.sql  s0566_8818_01_mangos_mangos_string.sql  s0600_10932_01_mangos_game_event_creature_data.sql  s0611_10945_01_mangos_mangos_string.sql  s0612_10946_01_mangos_spell_proc_event.sql  s0612_xxxxx_02_mangos_spell_chain.sql  s0624_10950_01_mangos_mangos_string.sql  s0636_10973_02_characters_game_event_status.sql  s0638_xxxxx_01_mangos_spell_bonus_data.sql  s0658_9288_01_mangos_spell_bonus_data.sql  s0687_9007_01_mangos_spell_proc_event.sql  s0696_11023_01_mangos_spell_threat.sql  s0811_xxxxx_01_mangos_spell_threat.sql  s0858_xxxxx_01_characters_characters.sql  s0859_11190_01_mangos_pool_creature_template.sql  s0902_11214_01_mangos_mangos_string.sql  s0924_11234_01_mangos_command.sql  s0974_10400_01_mangos_mangos_string.sql  s1019_10743_02_mangos_spell_chain.sql  s1057_10862_01_characters_mail.sql  s1188_11433_01_mangos_item_template.sql  s1244_11513_01_mangos_mangos_string.sql  s1246_11521_01_mangos_command.sql  s1248_11523_02_mangos_mangos_string.sql  s1342_11704_01_characters_auction.sql  s1350_11716_01_characters_auction.sql  s1350_11716_06_characters_guild_eventlog.sql  s1350_11716_07_characters_instance.sql  s1356_11731_01_mangos_command.sql  s1356_11731_02_mangos_mangos_string.sql  s1415_11754_01_mangos_mangos_string.sql  s1456_11876_01_mangos_creature_linking_template.sql  s1504_11926_01_mangos_creature_template.sql  s1528_11940_06_mangos_quest_start_scripts.sql  (+9 more)
sql/updates/0.12.3/: s1896_12363_01_mangos_npc_vendor.sql  s1932_12401_01_mangos_spell_template.sql  s1997_xxxxx_01_mangos_command.sql  s2091_xxxxx_01_mangos_creature_template.sql  s2201_12748_01_mangos_spell_template.sql  s2254_12816_01_mangos_command.sql  s2254_12816_02_mangos_mangos_string.sql  s2263_12823_01_mangos_command.sql  s2323_12931_01_characters_guild.sql  s2323_12931_02_characters_guild_bank_tab.sql  s2323_12931_03_characters_guild_member.sql  s2324_12916_01_mangos_battleground_template.sql
sql/updates/0.12_backport/: 087_9074_01_mangos_command.sql  091_9339_01_characters_group.sql  105_9680_01_characters_character_stats.sql  108_9752_01_mangos_gameobject_template.sql  115_9881_01_mangos_scripts.sql  116_9891_01_mangos_creature_movement.sql  118_9924_02_mangos_command.sql  132_10106_02_mangos_mangos_string.sql  134_10109_01_mangos_creature_model_info.sql  139_10171_01_mangos_mangos_string.sql  s0041_10254_01_characters_auctionhouse.sql  s0075_10289_01_mangos_creature_template.sql  s0114_09136_01_characters_character_ticket.sql  s0190_7196_02_mangos_spell_bonus_data.sql  s0216_7307_01_characters_arena_team_member.sql
sql/updates/0.12_branch/: 082_8893_01_mangos_mangos_string.sql  (+9 more)
src/framework/: CMakeLists.txt
src/testing/: .gitignore  CMakeLists.txt  TestRegistry.h  default.runsettings  minimal.runsettings  testing.runsettings
(+1968 files in other folders)
