# Copyright (C) 2005-2010 MaNGOS <http://getmangos.com/>
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA

## Process this file with automake to produce Makefile.in

## Sub-directories to parse
SUBDIRS = before_upgrade_to_0.13

## Change installation location
#  datadir = mangos/sql/updates
pkgdatadir = $(datadir)/mangos/sql/updates

## Files to be installed
#  Install basic SQL files to datadir
pkgdata_DATA = \
	001_6939_01_mangos_quest_template.sql \
	002_6944_01_mangos_mangos_string.sql \
	003_6961_01_mangos_command.sql \
	004_6970_01_mangos_playercreateinfo.sql \
	005_7107_01_mangos_string.sql \
	006_7214_01_mangos_command.sql \
	007_7252_01_mangos_command.sql \
	007_7252_02_mangos_mangos_string.sql \
	008_7290_01_mangos_command.sql \
	009_7314_01_characters_guild_rank.sql \
	010_7331_01_mangos_command.sql \
	011_7332_01_mangos_command.sql \
	012_7422_01_mangos_mangos_string.sql \
	013_7493_01_mangos_command.sql \
	014_7495_01_mangos_mangos_string.sql \
	015_7503_01_mangos_command.sql \
	016_7565_01_mangos_mangos_string.sql \
	017_7615_01_mangos_command.sql \
	018_7616_01_mangos_mangos_string.sql \
	018_7616_02_mangos_command.sql \
	019_7622_01_mangos_creature_ai_scripts.sql \
	019_7622_02_mangos_creature_ai_summons.sql \
	019_7622_03_mangos_creature_ai_texts.sql \
	020_7643_01_mangos_db_version.sql \
	020_7643_02_mangos_mangos_string.sql \
	021_xxxx_01_mangos_spell_proc_event.sql \
	022_xxxx_01_mangos_spell_proc_event.sql \
	023_xxxx_01_mangos_spell_proc_event.sql \
	024_xxxx_01_mangos_spell_proc_event.sql \
	025_7705_01_mangos_command.sql \
	026_7706_01_mangos_command.sql \
	027_7714_01_mangos_command.sql \
	028_7720_01_mangos_mangos_string.sql \
	029_7393_01_mangos_game_event.sql \
	030_7303_01_mangos_pools.sql \
	031_7796_01_mangos_command.sql \
	031_7796_02_mangos_mangos_string.sql \
	032_7059_01_characters_character_spell.sql \
	032_7059_02_characters_pet_spell.sql \
	033_7839_01_mangos_mangos_string.sql \
	033_7839_02_mangos_command.sql \
	034_7850_01_mangos_command.sql \
	035_7855_01_mangos_pools.sql \
	036_7867_01_realmd_account.sql \
	037_7893_01_mangos_command.sql \
	038_7886_01_mangos_petcreateinfo_spell.sql \
	039_7896_01_mangos_creature_template.sql \
	040_7902_01_mangos_pool_creature.sql \
	040_7902_02_mangos_pool_gameobject.sql \
	041_7932_01_characters_character_pet.sql \
	042_7938_01_realmd_account.sql \
	043_7945_01_mangos_quest_template.sql \
	044_7980_01_mangos_item_required_target.sql \
	045_8098_01_characters_character_action.sql \
	045_8098_02_mangos_playercreateinfo_action.sql \
	045_8098_03_characters_character_pet.sql \
	045_8098_04_characters_pet_spell.sql \
	046_7349_01_mangos_spell_area.sql \
	047_7376_01_mangos_spell_area.sql \
	048_7382_01_mangos_creature_template.sql \
	049_8104_01_characters.sql \
	050_8115_01_mangos_playercreateinfo_action.sql \
	051_8158_01_mangos_playercreateinfo_action.sql \
	052_8072_01_characters_characters.sql \
	052_8072_02_characters_characters.sql \
	053_8190_01_mangos_creature_template.sql \
	054_7439_01_mangos_mangos_string.sql \
	055_8332_01_realmd_realmcharacters.sql \
	056_8377_01_mangos_spell_area.sql \
	057_8399_01_mangos_spell_elixir.sql \
	058_7544_01_mangos_uptime.sql \
	058_7546_02_realmd_uptime.sql \
	059_7168_01_mangos_command.sql \
	060_8412_01_mangos_mangos_string.sql \
	061_7067_01_mangos_playercreateinfo_spell.sql \
	061_7067_02_mangos_spell_learn_spell.sql \
	061_7067_03_characters_character_spell.sql \
	062_xxxx_01_mangos_spell_learn_spell.sql \
	063_8444_01_mangos_mangos_string.sql \
	064_8462_01_mangos_creature_ai_texts.sql \
	065_8469_01_characters_character_spell.sql \
	066_8402_01_characters_guild_eventlog.sql \
	066_8402_02_characters_guild_bank_eventlog.sql \
	066_8409_01_characters_guild.sql \
	067_8573_01_mangos_mangos_string.sql \
	068_8600_01_mangos_command.sql \
	069_8548_01_mangos_creature_battleground.sql \
	070_8548_02_mangos_gameobject_battleground.sql \
	071_8549_03_mangos_battleground_events.sql \
	072_8607_01_mangos_string.sql \
	073_8607_02_mangos_command.sql \
	074_xxxx_01_mangos_spell_proc_event.sql \
	075_8608_01_mangos_mangos_string.sql \
	075_8608_02_mangos_battleground_events.sql \
	076_8702_01_characters_character_reputation.sql \
	077_8728_01_realmd_account.sql \
	078_8749_01_mangos_mail_loot_template.sql \
	079_8721_01_characters_guild.sql \
	080_8833_01_mangos_mangos_string.sql \
	080_8833_02_mangos_command.sql \
	080_8835_01_mangos_command.sql \
	081_8886_01_mangos_string.sql \
	082_8893_01_mangos_mangos_string.sql \
	083_8965_01_mangos_mangos_string.sql \
	083_8965_02_mangos_command.sql \
	084_7292_01_mangos_points_of_interest.sql \
	084_7292_02_mangos_locales_points_of_interest.sql \
	085_8923_01_mangos_gossip.sql \
	085_8929_01_mangos_gossip_scripts.sql \
	086_9010_01_realmd_realmlist.sql \
	087_9074_01_mangos_command.sql \
	088_9095_01_mangos_command.sql \
	089_9198_01_mangos_mangos_string.sql \
	090_7092_01_mangos_player_xp_for_level.sql \
	091_9339_01_characters_group.sql \
	092_9380_01_mangos_command.sql \
	093_9385_01_mangos_command.sql \
	094_9466_01_mangos_mangos_string.sql \
	095_9589_01_mangos_creature_template.sql \
	096_9590_01_mangos_db_script_string.sql \
	097_9611_01_characters.sql \
	098_9622_01_mangos_gameobject.sql \
	099_9509_01_mangos_item_template.sql \
	099_9636_01_mangos_item_template.sql \
	100_9656_01_mangos_command.sql \
	100_9656_02_mangos_mangos_string.sql \
	101_9663_01_mangos_mangos_string.sql \
	102_9687_01_characters_character_queststatus_daily.sql \
	103_9746_01_realmd_realmlist.sql \
	104_9748_01_realmd_realmlist.sql \
	105_9680_01_characters_character_stats.sql \
	106_9751_01_characters.sql \
	107_9728_01_mangos_gossip_menu_option.sql \
	108_9752_01_mangos_gameobject_template.sql \
	109_9753_01_mangos_instance_template.sql \
	110_9761_01_mangos_mangos_string.sql \
	111_9767_01_mangos_mangos_string.sql \
	111_9767_02_mangos_command.sql \
	111_9767_03_characters_characters.sql \
	111_9768_01_mangos_command.sql \
	112_8874_01_characters_character_skills.sql \
	113_9794_01_mangos_mangos_string.sql \
	113_9794_02_mangos_command.sql \
	114_9849_01_characters_saved_variables.sql \
	115_9881_01_mangos_scripts.sql \
	115_9883_01_mangos_scripts.sql \
	116_9891_01_mangos_creature_movement.sql \
	116_9891_02_mangos_creature_movement_scripts.sql \
	117_9886_01_mangos_mangos_string.sql \
	117_9886_02_mangos_command.sql \
	118_9924_01_mangos_mangos_string.sql \
	118_9924_02_mangos_command.sql \
	119_7369_01_mangos_quest_template.sql \
	120_xxxx_01_mangos_spell_proc_event.sql \
	121_10008_01_realmd_realmd_db_version.sql \
	122_10015_01_mangos_spell_proc_event.sql \
	123_10017_01_mangos_spell_proc_event.sql \
	124_7904_01_mangos_creature_template.sql \
	124_8237_01_mangos_creature_template.sql \
	125_xxxxx_01_mangos_spell_affect.sql \
	126_10044_01_mangos_spell_chain.sql \
	126_10044_02_mangos_spell_proc_event.sql \
	127_10045_01_mangos_spell_proc_event.sql \
	128_xxxxx_01_mangos_spell_proc_event.sql \
	129_10012_01_mangos_spell_proc_event.sql \
	130_10086_01_mangos_command.sql \
	131_10089_01_mangos_game_event_pool.sql \
	132_10106_01_mangos_command.sql \
	132_10106_02_mangos_mangos_string.sql \
	133_10107_01_mangos_mangos_string.sql \
	134_10109_01_mangos_creature_model_info.sql \
	135_10125_01_mangos_mangos_string.sql \
	136_10148_01_mangos_mangos_string.sql \
	137_7053_01_mangos_spell_proc_event.sql \
	138_7056_01_mangos_spell_proc_event.sql \
	139_10171_01_mangos_mangos_string.sql \
	README \
	s0020_10197_01_mangos_playercreateinfo.sql \
	s0028_10208_01_mangos_playercreateinfo.sql \
	s0038_10251_01_mangos_command.sql \
	s0039_10244_01_mangos_command.sql \
	s0041_10254_01_characters_auctionhouse.sql \
	s0041_10256_02_mangos_command.sql \
	s0046_10263_01_mangos_pool_creature.sql \
	s0046_10263_02_mangos_pool_gameobject.sql \
	s0046_10263_03_mangos_pool_pool.sql \
	s0065_10286_01_mangos_creature_addon.sql \
	s0069_10252_01_mangos_reputation_reward_rate.sql \
	s0070_10270_01_mangos_reputation_spillover_template.sql \
	s0075_10289_01_mangos_creature_template.sql \
	s0075_10289_02_mangos_creature_model_info.sql \
	s0077_10299_01_mangos_event_id_scripts.sql \
	s0080_10307_01_mangos_instance_template.sql \
	s0080_10307_02_mangos_scripted_areatrigger.sql \
	s0080_10307_03_mangos_scripted_event_id.sql \
	s0083_7193_01_mangos_mangos_string.sql \
	s0084_10008_01_realmd_realmd_db_version.sql \
	s0087_10312_01_characters_character_aura.sql \
	s0087_10312_02_characters_pet_aura.sql \
	s0091_10314_01_mangos_mangos_string.sql \
	s0091_10314_02_mangos_command.sql \
	s0099_10332_01_characters_character_aura.sql \
	s0099_10332_02_characters_pet_aura.sql \
	s0103_10331_01_mangos_mangos_string.sql \
	s0103_10331_02_mangos_command.sql \
	s0114_09136_01_characters_character_ticket.sql \
	s0114_10353_02_mangos_command.sql \
	s0114_10353_03_mangos_mangos_string.sql \
	s0116_10362_01_mangos_creature_movement_template.sql \
	s0117_10365_01_mangos_creature_ai_scripts.sql \
	s0134_10381_01_mangos_creature_model_race.sql \
	s0148_10419_01_mangos_spell_chain.sql \
	s0150_10423_01_mangos_spell_chain.sql \
	s0150_10427_02_mangos_spell_proc_event.sql \
	s0190_7196_01_mangos_spell_chain.sql \
	s0190_7196_02_mangos_spell_bonus_data.sql \
	s0190_7199_03_mangos_spell_bonus_data.sql \
	s0199_7242_01_mangos_spell_bonus_data.sql \
	s0201_7255_01_characters_characters.sql \
	s0216_7307_01_characters_arena_team_member.sql \
	s0221_10500_01_mangos_scripts.sql \
	s0224_10503_01_characters_creature_respawn.sql \
	s0224_10503_02_characters_gameobject_respawn.sql \
	s0224_10503_03_mangos_creature_respawn.sql \
	s0224_10503_04_mangos_gameobject_respawn.sql \
	s0251_10537_01_mangos_command.sql \
	s0262_xxxxx_01_mangos_spell_bonus_data.sql \
	s0263_7388_01_mangos_mangos_string.sql \
	s0264_7390_01_mangos_areatrigger_teleport.sql \
	s0283_7472_01_mangos_mangos_string.sql \
	s0298_7196_01_mangos_spell_chain.sql \
	s0298_7196_02_mangos_spell_bonus_data.sql \
	s0308_7560_01_mangos_gameobject_template.sql \
	s0345_10628_01_mangos_mangos_string.sql \
	s0346_10629_01_mangos_mangos_string.sql \
	s0356_10621_01_mangos_quest_template.sql \
	s0378_xxxxx_01_mangos_spell_proc_event.sql \
	s0379_10654_01_mangos_game_event_creature_quest.sql \
	s0382_10660_01_mangos_game_event_quest.sql \
	s0384_10664_01_characters_arena_team_stats.sql \
	s0386_10662_01_characters_item_loot.sql

## Additional files to include when running 'make dist'
#  SQL update files, to upgrade database schema from older revisions
EXTRA_DIST = \
	001_6939_01_mangos_quest_template.sql \
	002_6944_01_mangos_mangos_string.sql \
	003_6961_01_mangos_command.sql \
	004_6970_01_mangos_playercreateinfo.sql \
	005_7107_01_mangos_string.sql \
	006_7214_01_mangos_command.sql \
	007_7252_01_mangos_command.sql \
	007_7252_02_mangos_mangos_string.sql \
	008_7290_01_mangos_command.sql \
	009_7314_01_characters_guild_rank.sql \
	010_7331_01_mangos_command.sql \
	011_7332_01_mangos_command.sql \
	012_7422_01_mangos_mangos_string.sql \
	013_7493_01_mangos_command.sql \
	014_7495_01_mangos_mangos_string.sql \
	015_7503_01_mangos_command.sql \
	016_7565_01_mangos_mangos_string.sql \
	017_7615_01_mangos_command.sql \
	018_7616_01_mangos_mangos_string.sql \
	018_7616_02_mangos_command.sql \
	019_7622_01_mangos_creature_ai_scripts.sql \
	019_7622_02_mangos_creature_ai_summons.sql \
	019_7622_03_mangos_creature_ai_texts.sql \
	020_7643_01_mangos_db_version.sql \
	020_7643_02_mangos_mangos_string.sql \
	021_xxxx_01_mangos_spell_proc_event.sql \
	022_xxxx_01_mangos_spell_proc_event.sql \
	023_xxxx_01_mangos_spell_proc_event.sql \
	024_xxxx_01_mangos_spell_proc_event.sql \
	025_7705_01_mangos_command.sql \
	026_7706_01_mangos_command.sql \
	027_7714_01_mangos_command.sql \
	028_7720_01_mangos_mangos_string.sql \
	029_7393_01_mangos_game_event.sql \
	030_7303_01_mangos_pools.sql \
	031_7796_01_mangos_command.sql \
	031_7796_02_mangos_mangos_string.sql \
	032_7059_01_characters_character_spell.sql \
	032_7059_02_characters_pet_spell.sql \
	033_7839_01_mangos_mangos_string.sql \
	033_7839_02_mangos_command.sql \
	034_7850_01_mangos_command.sql \
	035_7855_01_mangos_pools.sql \
	036_7867_01_realmd_account.sql \
	037_7893_01_mangos_command.sql \
	038_7886_01_mangos_petcreateinfo_spell.sql \
	039_7896_01_mangos_creature_template.sql \
	040_7902_01_mangos_pool_creature.sql \
	040_7902_02_mangos_pool_gameobject.sql \
	041_7932_01_characters_character_pet.sql \
	042_7938_01_realmd_account.sql \
	043_7945_01_mangos_quest_template.sql \
	044_7980_01_mangos_item_required_target.sql \
	045_8098_01_characters_character_action.sql \
	045_8098_02_mangos_playercreateinfo_action.sql \
	045_8098_03_characters_character_pet.sql \
	045_8098_04_characters_pet_spell.sql \
	046_7349_01_mangos_spell_area.sql \
	047_7376_01_mangos_spell_area.sql \
	048_7382_01_mangos_creature_template.sql \
	049_8104_01_characters.sql \
	050_8115_01_mangos_playercreateinfo_action.sql \
	051_8158_01_mangos_playercreateinfo_action.sql \
	052_8072_01_characters_characters.sql \
	052_8072_02_characters_characters.sql \
	053_8190_01_mangos_creature_template.sql \
	054_7439_01_mangos_mangos_string.sql \
	055_8332_01_realmd_realmcharacters.sql \
	056_8377_01_mangos_spell_area.sql \
	057_8399_01_mangos_spell_elixir.sql \
	058_7544_01_mangos_uptime.sql \
	058_7546_02_realmd_uptime.sql \
	059_7168_01_mangos_command.sql \
	060_8412_01_mangos_mangos_string.sql \
	061_7067_01_mangos_playercreateinfo_spell.sql \
	061_7067_02_mangos_spell_learn_spell.sql \
	061_7067_03_characters_character_spell.sql \
	062_xxxx_01_mangos_spell_learn_spell.sql \
	063_8444_01_mangos_mangos_string.sql \
	064_8462_01_mangos_creature_ai_texts.sql \
	065_8469_01_characters_character_spell.sql \
	066_8402_01_characters_guild_eventlog.sql \
	066_8402_02_characters_guild_bank_eventlog.sql \
	066_8409_01_characters_guild.sql \
	067_8573_01_mangos_mangos_string.sql \
	068_8600_01_mangos_command.sql \
	069_8548_01_mangos_creature_battleground.sql \
	070_8548_02_mangos_gameobject_battleground.sql \
	071_8549_03_mangos_battleground_events.sql \
	072_8607_01_mangos_string.sql \
	073_8607_02_mangos_command.sql \
	074_xxxx_01_mangos_spell_proc_event.sql \
	075_8608_01_mangos_mangos_string.sql \
	075_8608_02_mangos_battleground_events.sql \
	076_8702_01_characters_character_reputation.sql \
	077_8728_01_realmd_account.sql \
	078_8749_01_mangos_mail_loot_template.sql \
	079_8721_01_characters_guild.sql \
	080_8833_01_mangos_mangos_string.sql \
	080_8833_02_mangos_command.sql \
	080_8835_01_mangos_command.sql \
	081_8886_01_mangos_string.sql \
	082_8893_01_mangos_mangos_string.sql \
	083_8965_01_mangos_mangos_string.sql \
	083_8965_02_mangos_command.sql \
	084_7292_01_mangos_points_of_interest.sql \
	084_7292_02_mangos_locales_points_of_interest.sql \
	085_8923_01_mangos_gossip.sql \
	085_8929_01_mangos_gossip_scripts.sql \
	086_9010_01_realmd_realmlist.sql \
	087_9074_01_mangos_command.sql \
	088_9095_01_mangos_command.sql \
	089_9198_01_mangos_mangos_string.sql \
	090_7092_01_mangos_player_xp_for_level.sql \
	091_9339_01_characters_group.sql \
	092_9380_01_mangos_command.sql \
	093_9385_01_mangos_command.sql \
	094_9466_01_mangos_mangos_string.sql \
	095_9589_01_mangos_creature_template.sql \
	096_9590_01_mangos_db_script_string.sql \
	097_9611_01_characters.sql \
	098_9622_01_mangos_gameobject.sql \
	099_9509_01_mangos_item_template.sql \
	099_9636_01_mangos_item_template.sql \
	100_9656_01_mangos_command.sql \
	100_9656_02_mangos_mangos_string.sql \
	101_9663_01_mangos_mangos_string.sql \
	102_9687_01_characters_character_queststatus_daily.sql \
	103_9746_01_realmd_realmlist.sql \
	104_9748_01_realmd_realmlist.sql \
	105_9680_01_characters_character_stats.sql \
	106_9751_01_characters.sql \
	107_9728_01_mangos_gossip_menu_option.sql \
	108_9752_01_mangos_gameobject_template.sql \
	109_9753_01_mangos_instance_template.sql \
	110_9761_01_mangos_mangos_string.sql \
	111_9767_01_mangos_mangos_string.sql \
	111_9767_02_mangos_command.sql \
	111_9767_03_characters_characters.sql \
	111_9768_01_mangos_command.sql \
	112_8874_01_characters_character_skills.sql \
	113_9794_01_mangos_mangos_string.sql \
	113_9794_02_mangos_command.sql \
	114_9849_01_characters_saved_variables.sql \
	115_9881_01_mangos_scripts.sql \
	115_9883_01_mangos_scripts.sql \
	116_9891_01_mangos_creature_movement.sql \
	116_9891_02_mangos_creature_movement_scripts.sql \
	117_9886_01_mangos_mangos_string.sql \
	117_9886_02_mangos_command.sql \
	118_9924_01_mangos_mangos_string.sql \
	118_9924_02_mangos_command.sql \
	119_7369_01_mangos_quest_template.sql \
	120_xxxx_01_mangos_spell_proc_event.sql \
	121_10008_01_realmd_realmd_db_version.sql \
	122_10015_01_mangos_spell_proc_event.sql \
	123_10017_01_mangos_spell_proc_event.sql \
	124_7904_01_mangos_creature_template.sql \
	124_8237_01_mangos_creature_template.sql \
	125_xxxxx_01_mangos_spell_affect.sql \
	126_10044_01_mangos_spell_chain.sql \
	126_10044_02_mangos_spell_proc_event.sql \
	127_10045_01_mangos_spell_proc_event.sql \
	128_xxxxx_01_mangos_spell_proc_event.sql \
	129_10012_01_mangos_spell_proc_event.sql \
	130_10086_01_mangos_command.sql \
	131_10089_01_mangos_game_event_pool.sql \
	132_10106_01_mangos_command.sql \
	132_10106_02_mangos_mangos_string.sql \
	133_10107_01_mangos_mangos_string.sql \
	134_10109_01_mangos_creature_model_info.sql \
	135_10125_01_mangos_mangos_string.sql \
	136_10148_01_mangos_mangos_string.sql \
	137_7053_01_mangos_spell_proc_event.sql \
	138_7056_01_mangos_spell_proc_event.sql \
	139_10171_01_mangos_mangos_string.sql \
	README \
	s0020_10197_01_mangos_playercreateinfo.sql \
	s0028_10208_01_mangos_playercreateinfo.sql \
	s0038_10251_01_mangos_command.sql \
	s0039_10244_01_mangos_command.sql \
	s0041_10254_01_characters_auctionhouse.sql \
	s0041_10256_02_mangos_command.sql \
	s0046_10263_01_mangos_pool_creature.sql \
	s0046_10263_02_mangos_pool_gameobject.sql \
	s0046_10263_03_mangos_pool_pool.sql \
	s0065_10286_01_mangos_creature_addon.sql \
	s0069_10252_01_mangos_reputation_reward_rate.sql \
	s0070_10270_01_mangos_reputation_spillover_template.sql \
	s0075_10289_01_mangos_creature_template.sql \
	s0075_10289_02_mangos_creature_model_info.sql \
	s0077_10299_01_mangos_event_id_scripts.sql \
	s0080_10307_01_mangos_instance_template.sql \
	s0080_10307_02_mangos_scripted_areatrigger.sql \
	s0080_10307_03_mangos_scripted_event_id.sql \
	s0083_7193_01_mangos_mangos_string.sql \
	s0084_10008_01_realmd_realmd_db_version.sql \
	s0087_10312_01_characters_character_aura.sql \
	s0087_10312_02_characters_pet_aura.sql \
	s0091_10314_01_mangos_mangos_string.sql \
	s0091_10314_02_mangos_command.sql \
	s0099_10332_01_characters_character_aura.sql \
	s0099_10332_02_characters_pet_aura.sql \
	s0103_10331_01_mangos_mangos_string.sql \
	s0103_10331_02_mangos_command.sql \
	s0114_09136_01_characters_character_ticket.sql \
	s0114_10353_02_mangos_command.sql \
	s0114_10353_03_mangos_mangos_string.sql \
	s0116_10362_01_mangos_creature_movement_template.sql \
	s0117_10365_01_mangos_creature_ai_scripts.sql \
	s0134_10381_01_mangos_creature_model_race.sql \
	s0148_10419_01_mangos_spell_chain.sql \
	s0150_10423_01_mangos_spell_chain.sql \
	s0150_10427_02_mangos_spell_proc_event.sql \
	s0190_7196_01_mangos_spell_chain.sql \
	s0190_7196_02_mangos_spell_bonus_data.sql \
	s0190_7199_03_mangos_spell_bonus_data.sql \
	s0199_7242_01_mangos_spell_bonus_data.sql \
	s0201_7255_01_characters_characters.sql \
	s0216_7307_01_characters_arena_team_member.sql \
	s0221_10500_01_mangos_scripts.sql \
	s0224_10503_01_characters_creature_respawn.sql \
	s0224_10503_02_characters_gameobject_respawn.sql \
	s0224_10503_03_mangos_creature_respawn.sql \
	s0224_10503_04_mangos_gameobject_respawn.sql \
	s0251_10537_01_mangos_command.sql \
	s0262_xxxxx_01_mangos_spell_bonus_data.sql \
	s0263_7388_01_mangos_mangos_string.sql \
	s0264_7390_01_mangos_areatrigger_teleport.sql \
	s0283_7472_01_mangos_mangos_string.sql \
	s0298_7196_01_mangos_spell_chain.sql \
	s0298_7196_02_mangos_spell_bonus_data.sql \
	s0308_7560_01_mangos_gameobject_template.sql \
	s0345_10628_01_mangos_mangos_string.sql \
	s0346_10629_01_mangos_mangos_string.sql \
	s0356_10621_01_mangos_quest_template.sql \
	s0378_xxxxx_01_mangos_spell_proc_event.sql \
	s0379_10654_01_mangos_game_event_creature_quest.sql \
	s0382_10660_01_mangos_game_event_quest.sql \
	s0384_10664_01_characters_arena_team_stats.sql \
	s0386_10662_01_characters_item_loot.sql
